<resources>
    <string name="app_name">QueTalFueTuDia</string>
    <string name="header_title">¿Qué tal fue tu día?</string>
    <string name="respuesta1">Excelente</string>
    <string name="respuesta2">Bueno</string>
    <string name="respuesta3">Malo</string>
    <string name="respuesta4">Pésimo</string>
    <string name="btn_txt">Enviar</string>

    <string name="mensaje1">¡Qué buena noticia!</string>
    <string name="mensaje2">Seguro que mañana será excelente</string>
    <string name="mensaje3">¡Vamos! Que no decaiga</string>
    <string name="mensaje4">¡Arriba ese ánimo!</string>
</resources>