<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/header_title"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
    />

    <RadioGroup
        android:id="@+id/rg_respuestas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        >

        <RadioButton
            android:id="@+id/respuesta1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/respuesta1" />

        <RadioButton
            android:id="@+id/respuesta2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/respuesta2"
        />

        <RadioButton
            android:id="@+id/respuesta3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/respuesta3"
        />

        <RadioButton
            android:id="@+id/respuesta4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/respuesta4"
        />

    </RadioGroup>

    <Button
        android:id="@+id/btn_enviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt"
        android:layout_gravity="center"
        />
</LinearLayout>